force-app/main/default/objects/ampi__ManageDisbursements__c/ampi__ManageDisbursements__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customize the interface for the ManageDisbursements page by selecting whether or not to display buttons and/or provide a view-only interface for specific users/profiles.</description>
    <label>Manage Disbursements</label>
</CustomObject>