force-app/main/default/objects/ampi__ManageDisbursements__c/fields/ampi__Hide_Add_New_Disbursement_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Add_New_Disbursement_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Add New Disbursement Button</label>
    <type>Checkbox</type>
</CustomField>