force-app/main/default/objects/ampi__ManageDisbursements__c/fields/ampi__Hide_Delete_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Delete_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Delete Icon</label>
    <type>Checkbox</type>
</CustomField>